--- a/.github/workflows/node-build-template.yml
+++ b/.github/workflows/node-build-template.yml
@@ -1,1 +1,21 @@
+name: Nodejs Build Template
+on:
+    workflow_call:
+        inputs:
+            node-version:
+                required: true
+                type: string
+                description: 'The Nodejs version to use for the build'
 
+jobs:
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout Code
+              uses: actions/checkout@v4
+            - name: Set up Node.js
+              uses: actions/Setup-node@v4
+              with:
+                node-version: ${{ inputs.node-version }}
+            - name: Install dependencies
+              run: npm install
